@@ -288,6 +288,12 @@ void my_subscribe_callback(struct mosquitto *mosq, void *obj, uint16_t mid, int 
 	printf("\n");
 }
 
+void my_log_callback(struct mosquitto *mosq, void *obj, int level, const char *str)
+{
+	/* Pring all log messages regardless of level. */
+	printf("%s\n", str);
+}
+
 int main(int argc, char *argv[])
 {
 	char id[30];
@@ -303,8 +309,7 @@ int main(int argc, char *argv[])
 		fprintf(stderr, "Error: Out of memory.\n");
 		return 1;
 	}
-	mosquitto_log_init(mosq, MOSQ_LOG_DEBUG | MOSQ_LOG_ERR | MOSQ_LOG_WARNING
-			| MOSQ_LOG_NOTICE | MOSQ_LOG_INFO, MOSQ_LOG_STDERR);
+	mosquitto_log_callback_set(mosq, my_log_callback);
 
 	mosquitto_connect_callback_set(mosq, my_connect_callback);
 	mosquitto_message_callback_set(mosq, my_message_callback);
